--- a/contacts.html
+++ b/contacts.html
@@ -20,7 +20,7 @@
 
     <p>
         <a href="https://instagram.com/_agnish16_?utm_source=qr&igshid=OGU0MmVlOWVjOQ=="><img src="./instagram.png" alt="Link to my instagram" height="25" /></a>
-        <a href="www.linkedin.com/in/agnish-bhattacharyya-324031286"><img src="./linkedin.png" alt="Link to my linkedin"height="25"/></a>
+        <a href="https://www.linkedin.com/in/agnish-bhattacharyya-324031286"><img src="./linkedin.png" alt="Link to my linkedin"height="25"/></a>
     </p>
     
 </body>
